# helm-charts

./: .gitignore  .helmdocsignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  DEVELOPERS.md  Makefile  README.md  catalog-info.yaml  index.yaml  mkdocs.yml  pyproject.toml  renovate.json5  requirements-dev.txt
.agents/skills/new-helm-chart/: SKILL.md
.github/workflows/: release.yml  tests.yml
charts/: .gitignore  README.md  README.md.gotmpl
charts/ack-documentdb-provider/: Chart.yaml  README.md  README.md.gotmpl  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.yaml
charts/ack-documentdb-provider/docs/: index.md
charts/ack-documentdb-provider/templates/: _helpers.tpl  connection-secret.yaml  dbcluster.yaml  field-exports.yaml  password-generator.yaml  push-secret.yaml
charts/ack-elasticache-provider/: Chart.yaml  README.md  README.md.gotmpl  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.yaml
charts/ack-elasticache-provider/docs/: index.md
charts/ack-elasticache-provider/templates/: _helpers.tpl  cache-parameter-group.yaml  connection-secret.yaml  field-exports.yaml  password-generator.yaml  push-secret.yaml  replicationgroup.yaml  sequenced-bootstrap-jobs.yaml
charts/ack-opensearch-provider/: Chart.yaml  README.md  README.md.gotmpl  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.yaml
charts/ack-opensearch-provider/docs/: index.md
charts/ack-opensearch-provider/templates/: _helpers.tpl  application-user-passwords.yaml  connection-secret.yaml  domain.yaml  field-exports.yaml  password-generator.yaml  push-secret.yaml  security-bootstrap.yaml  sequenced-bootstrap-jobs.yaml
charts/dbinstance/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/dbinstance/templates/: .externalSecret.yaml.swp  NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/ingress-nginx/: Chart.yaml  README.md  README.md.gotmpl  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.yaml
charts/ingress-nginx/docs/: index.md
charts/ingress-nginx/templates/: _helpers.tpl  controller-daemonset.yaml  controller-deployment.yaml  default-backend-deployment.yaml
charts/ingress-nginx/tests/: controller-daemonset_test.yaml  controller-deployment_test.yaml
charts/nes-node-web/: .helmignore  Chart.yaml  README.md  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.schema.json  values.yaml
charts/nes-node-web/docs/: index.md
charts/nes-node-web/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
charts/universal-chart/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  argo_app.yaml  catalog-info.yaml  linter_values.yaml  mkdocs.yml  values.schema.json  values.yaml
charts/universal-chart/docs/: index.md
charts/universal-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  externalsecret.yaml  extraManifests.yaml  hpa.yaml  ingress.yaml  metrics-block-ingress.yaml  pdb.yaml  prometheusrule.yaml  s3-bucket.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: index.md
scripts/: check_chart_version_bump.py  check_fixture_goldens.py  check_linter_symlinks.py  check_release_workflow_charts.py  regenerate_golden_files.py  resolve_chart_release.py  resolve_ingress_nginx_release_version.py  validate_agent_skills.py  validate_chart_backstage_scaffold.py  validate_mkdocs.py
tests/: README.md  __init__.py  chart_test_utils.py  conftest.py  test_ack_documentdb_provider.py  test_ack_documentdb_provider_golden.py  test_ack_elasticache_provider.py  test_ack_elasticache_provider_golden.py  test_ack_opensearch_provider.py  test_ack_opensearch_provider_golden.py  test_chart_test_utils.py  test_golden.py  test_ingress_nginx_release_version.py  test_resolve_chart_release.py  test_universal_chart.py  test_universal_chart_golden.py  test_universal_chart_metrics_block.py  test_validate_chart_backstage_scaffold.py
tests/fixtures/ack-documentdb-provider/: legacy-compat.yaml  minimal-values.golden.yaml  minimal-values.yaml
tests/fixtures/ack-elasticache-provider/: minimal-values.golden.yaml  minimal-values.yaml  sample-values.golden.yaml  sample-values.yaml  sequenced-values.golden.yaml  sequenced-values.yaml  valkey-values.golden.yaml  valkey-values.yaml
tests/fixtures/ack-opensearch-provider/: application-user-values.golden.yaml  application-user-values.yaml  global-image-repo-values.golden.yaml  global-image-repo-values.yaml  legacy-compat.yaml  minimal-values.golden.yaml  minimal-values.yaml  role-mapping-connection-secret-values.golden.yaml  role-mapping-connection-secret-values.yaml  security-bootstrap-values.golden.yaml  security-bootstrap-values.yaml  sequenced-reflector-values.golden.yaml  sequenced-reflector-values.yaml  sequenced-values.golden.yaml  sequenced-values.yaml
tests/fixtures/ingress-nginx/: minimal-values.golden.yaml
(+49 files in other folders)
