[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-charts"
version = "0.0.0"
description = "Helm chart testing utilities and fixtures"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
ci = [
    "PyYAML==6.0.3",
    "packaging==26.0",
]
dev = [
    "pytest==9.0.2",
    "pytest-xdist==3.8.0",
    "pytest-helm-charts==1.3.4",
    "flake8==7.3.0",
    "PyYAML==6.0.3",
    "packaging==26.0",
    "pre-commit==4.5.1",
]

[tool.black]
line-length = 80
target-version = ["py310"]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.flake8]
max-line-length = 80
extend-ignore = [
    "D202",
    "D203",  # recommended with Black
    "D212",  # recommended with Black
    "E203",  # black-compatible slicing
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.isort]
profile = "black"
line_length = 80
combine_as_imports = true
skip = [
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
#addopts = "-n auto"
# Parallel runs technically work; Helm dependencies are built in a master-only
# pre-step to avoid races when xdist workers start. However, running the tests
# in parallel usually is slower. If you want to try that out, just uncomment.
# Auto will match the number of CPUs, or you can specify a fixed number.
